# spqr-ai

./: .gitignore  .prettierrc.json  AGENT_PLAN.md  Justfile  NEXT_STEPS  README.md  REVIEW_NOTES.md
apps/api/: pyproject.toml  requirements-dev.txt
apps/api/scripts/: check_openapi.py  export_openapi.py
apps/api/src/legions_api/: __init__.py  logging.py  main.py
apps/api/src/legions_api/ai/: __init__.py  evaluator.py  generator.py  search.py  smoke.py  types.py
apps/api/src/legions_api/api/: __init__.py  dependencies.py  event_stream.py  mapper.py  schemas.py  state_store.py
apps/api/src/legions_api/api/routes/: ai.py  game.py
apps/api/src/legions_api/core/: __init__.py  actions.py  bootstrap.py  random.py  results.py
apps/api/src/legions_api/core/model/: __init__.py  game_state.py  hex.py  leader.py  map.py  ruleset.py  scenario.py  unit.py
apps/api/src/legions_api/core/replay/: __init__.py  engine.py
apps/api/src/legions_api/core/rules/: __init__.py  facing.py  los.py  missile.py  movement.py  pathfinding.py  shock.py  zoc.py
apps/api/src/legions_api/core/scenario/: __init__.py  loader.py
apps/api/src/legions_api/persistence/: __init__.py  replay_log.py  snapshots.py  state_codec.py
apps/api/tests/: test_ai_evaluator.py  test_ai_generator.py  test_ai_search.py  test_ai_smoke.py  test_facing.py  test_health.py  test_hex_coord.py  test_los.py  test_missile.py  test_movement.py  test_pathfinding.py  test_random.py  test_reaction_flow.py  test_replay.py  test_shock.py  test_table_adapters.py  test_table_loader.py  test_turn_sequence.py
(+76 files in other folders)
