[project]
name = "legions-api"
version = "0.1.0"
description = "Legions backend API and rules engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.13.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "A", "C4", "T20", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]
